# quad-ci

./: LICENSE  Makefile  README.md  quad.cabal
app/: Main.hs
src/: Agent.hs  Cli.hs  Core.hs  Docker.hs  Github.hs  JobHandler.hs  Runner.hs  Server.hs  Socket.hs
src/JobHandler/: Memory.hs
test/: Spec.hs  pipeline.sample.yml
