cabal-version:    3.0
name:             quad
version:          0.0.0
license:          MIT
license-file:     LICENSE
build-type:       Simple
extra-source-files:
    LICENSE
    README.md

source-repository head
  type: git
  location: https://github.com/jturner/quad-ci

common common-extensions
  default-extensions: BlockArguments
                      DeriveAnyClass
                      DeriveGeneric
                      LambdaCase
                      NoImplicitPrelude
                      OverloadedStrings
                      StrictData

  default-language: Haskell2010

common common-ghc-options
  ghc-options: -F
               -pgmF=record-dot-preprocessor

common common-rts-options
  ghc-options: -rtsopts
               -threaded
               -with-rtsopts=-N

library
  import: common-extensions
  import: common-ghc-options
  exposed-modules:
      Agent
      Cli
      Core
      Docker
      Github
      JobHandler
      JobHandler.Memory
      Runner
      Server
      Socket
  other-modules:
      Paths_quad
  hs-source-dirs:
      src
  build-depends:
      aeson
    , async
    , base
    , butcher
    , hslogger
    , http-client
    , http-conduit
    , http-types
    , network
    , record-hasfield
    , rio
    , scotty
    , serialise
    , stm
    , time
    , typed-process
    , wai-cors
    , yaml

executable quad
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  main-is: Main.hs
  other-modules:
      Paths_quad
  hs-source-dirs:
      app
  build-depends:
      aeson
    , async
    , base
    , butcher
    , hslogger
    , http-client
    , http-conduit
    , http-types
    , network
    , quad
    , record-hasfield
    , rio
    , scotty
    , serialise
    , stm
    , time
    , typed-process
    , wai-cors
    , yaml

test-suite quad-test
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_quad
  hs-source-dirs:
      test
  build-depends:
      aeson
    , async
    , base
    , butcher
    , hslogger
    , hspec
    , http-client
    , http-conduit
    , http-types
    , network
    , quad
    , record-hasfield
    , rio
    , scotty
    , serialise
    , stm
    , time
    , typed-process
    , wai-cors
    , yaml
